# vban-ui

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/util/: network.rs
src/components/: ProcessHandler.vue  TestVBAN.vue  VbanProcess.vue
src/stores/: vbanListStore.ts
