[package]
name = "vban-ui"
version = "0.1.0"
description = "Just a Linux UI for vban"
authors = ["GaryC"]
license = "GPL-3.0"
repository = "https://github.com/GaryCraft/vban-ui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pnet = "0.34.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
